# openKTV

./: .gitignore  LICENSE  README.md
KtvService/: Cargo.toml  docker-compose.yml
KtvService/datadir/: auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
KtvService/datadir/ktv/: artist.frm  artist.ibd  song.frm  song.ibd
KtvService/datadir/mysql/: columns_priv.MYI  db.MYI  engine_cost.ibd  event.MYI  func.MYI  innodb_index_stats.ibd  innodb_table_stats.ibd  ndb_binlog_index.MYI  proc.MYD  proc.MYI  procs_priv.MYI  proxies_priv.MYI  server_cost.ibd  tables_priv.MYD  tables_priv.MYI  time_zone.ibd  time_zone_name.ibd  time_zone_transition_type.ibd  user.MYD  user.MYI
KtvService/datadir/sys/: host_summary.frm  host_summary_by_file_io.frm  host_summary_by_file_io_type.frm  host_summary_by_stages.frm  host_summary_by_statement_latency.frm  host_summary_by_statement_type.frm  innodb_buffer_stats_by_schema.frm  innodb_buffer_stats_by_table.frm  innodb_lock_waits.frm  io_by_thread_by_latency.frm  io_global_by_file_by_bytes.frm  io_global_by_file_by_latency.frm  io_global_by_wait_by_bytes.frm  io_global_by_wait_by_latency.frm  latest_file_io.frm  memory_by_host_by_current_bytes.frm  memory_by_thread_by_current_bytes.frm  memory_by_user_by_current_bytes.frm  memory_global_by_current_bytes.frm  memory_global_total.frm  metrics.frm  processlist.frm  ps_check_lost_instrumentation.frm  schema_auto_increment_columns.frm  schema_index_statistics.frm  schema_object_overview.frm  schema_redundant_indexes.frm  schema_table_lock_waits.frm  schema_table_statistics.frm  schema_table_statistics_with_buffer.frm  (+72 more)
KtvService/src/: main.rs
(+33 files in other folders)
