[package]
name = "KtvService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = { version = "1.1.2", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_19"] }
env_logger = "0.9.1"
log = "0.4.17"
strum = "0.24.1"
strum_macros = "0.24.3"
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
thiserror = "1.0.37"
derive_more = "0.99.17"