[package]
name = "KtvService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mysql", "chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.0.1"
env_logger = "0.9.1"
log = "0.4.17"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"
derive_more = "0.99.17"
chrono = { version = "^0.4.1", features = ["serde", "rustc-serialize"] }